Testado com sucesso e reformulado algumas partes